--- a/src/main/resources/com/icq/imagecolorquantizer/main-view.fxml
+++ b/src/main/resources/com/icq/imagecolorquantizer/main-view.fxml
@@ -4,40 +4,39 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0"
-            prefWidth="890.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.icq.imagecolorquantizer.controller.MainViewController">
-    <BorderPane prefHeight="570.0" prefWidth="890.0">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.icq.imagecolorquantizer.controller.MainViewController">
+    <BorderPane prefHeight="600.0" prefWidth="890.0">
         <center>
-            <Pane prefHeight="658.0" prefWidth="927.0" style="-fx-background-color: #FFFFFF;"
-                  BorderPane.alignment="CENTER">
-                <Button fx:id="selectImageButton" layoutX="747.0" layoutY="40.0" mnemonicParsing="false"
-                        onAction="#selectImageAction" prefHeight="27.0" prefWidth="96.0" text="Select Image"/>
-                <TextField fx:id="imageFilePath" disable="true" layoutX="41.0" layoutY="41.0" prefHeight="26.0"
-                           prefWidth="588.0" promptText="select an image to show"/>
-                <ImageView fx:id="originalImageView" fitHeight="300.0" fitWidth="400.0" layoutX="42.0" layoutY="173.0"
-                           pickOnBounds="true" preserveRatio="true">
+            <Pane prefHeight="658.0" prefWidth="927.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER">
+                <Button fx:id="selectImageButton" layoutX="747.0" layoutY="40.0" mnemonicParsing="false" onAction="#selectImageAction" prefHeight="27.0" prefWidth="96.0" text="Select Image" />
+                <TextField fx:id="imageFilePath" disable="true" layoutX="41.0" layoutY="41.0" prefHeight="26.0" prefWidth="588.0" promptText="select an image to show" />
+                <ImageView fx:id="originalImageView" fitHeight="300.0" fitWidth="400.0" layoutX="42.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
                 </ImageView>
-                <ImageView fx:id="quantizedImageView" fitHeight="300.0" fitWidth="400.0" layoutX="447.0" layoutY="173.0"
-                           pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="quantizedImageView" fitHeight="300.0" fitWidth="400.0" layoutX="447.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
                 </ImageView>
-                <HBox fx:id="imageQuantizationAlgorithmHBox" alignment="BASELINE_LEFT" layoutX="42.0" layoutY="93.0"
-                      prefHeight="28.0" prefWidth="588.0" spacing="170.0">
+                <HBox fx:id="imageQuantizationAlgorithmHBox" alignment="BASELINE_LEFT" layoutX="42.0" layoutY="93.0" prefHeight="28.0" prefWidth="588.0" spacing="170.0">
                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Quantization Algorithm">
                         <font>
-                            <Font name="Open Sans" size="13.0"/>
+                            <Font name="Open Sans" size="13.0" />
                         </font>
                     </Text>
-                    <ComboBox fx:id="imageQuantizationAlgorithmComboBox" prefHeight="25.0" prefWidth="288.0"
-                              promptText="select algorithm"/>
+                    <ComboBox fx:id="imageQuantizationAlgorithmComboBox" prefHeight="25.0" prefWidth="288.0" promptText="select algorithm" />
                 </HBox>
-                <Button fx:id="quantizeButton" layoutX="747.0" layoutY="95.0" mnemonicParsing="false"
-                        onAction="#quantizeImageAction" prefHeight="27.0" prefWidth="96.0" text="Quantize"/>
-                <Text layoutX="206.0" layoutY="504.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Original Image"/>
-                <Text layoutX="602.0" layoutY="502.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantized Image"/>
+                <Button fx:id="quantizeButton" layoutX="747.0" layoutY="95.0" mnemonicParsing="false" onAction="#quantizeImageAction" prefHeight="27.0" prefWidth="96.0" text="Quantize" />
+                <Text fill="#1d7874" layoutX="211.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Original Image" />
+                <Text fill="#1d7874" layoutX="592.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantized Image" />
+            <Text fx:id="originalImageSizeTextView" fill="#274060" layoutX="46.0" layoutY="512.0" strokeType="OUTSIDE" strokeWidth="0.0">
+               <font>
+                  <Font name="Open Sans" size="12.0" />
+               </font>
+            </Text>
             </Pane>
         </center>
     </BorderPane>
