--- a/src/main/resources/com/icq/imagecolorquantizer/main-view.fxml
+++ b/src/main/resources/com/icq/imagecolorquantizer/main-view.fxml
@@ -6,8 +6,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -17,9 +20,9 @@
             <Pane prefHeight="658.0" prefWidth="927.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER">
                 <Button fx:id="selectImageButton" layoutX="747.0" layoutY="40.0" mnemonicParsing="false" onAction="#selectImageAction" prefHeight="27.0" prefWidth="96.0" text="Select Image" />
                 <TextField fx:id="imageFilePath" disable="true" layoutX="41.0" layoutY="41.0" prefHeight="26.0" prefWidth="588.0" promptText="select an image to show" />
-                <ImageView fx:id="originalImageView" fitHeight="300.0" fitWidth="400.0" layoutX="42.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="originalImageView" fitHeight="300.0" fitWidth="400.0" layoutX="42.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
                 </ImageView>
-                <ImageView fx:id="quantizedImageView" fitHeight="300.0" fitWidth="400.0" layoutX="447.0" layoutY="173.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="quantizedImageView" fitHeight="300.0" fitWidth="400.0" layoutX="445.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true">
                 </ImageView>
                 <HBox fx:id="imageQuantizationAlgorithmHBox" alignment="BASELINE_LEFT" layoutX="42.0" layoutY="93.0" prefHeight="28.0" prefWidth="588.0" spacing="170.0">
                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Quantization Algorithm">
@@ -30,13 +33,33 @@
                     <ComboBox fx:id="imageQuantizationAlgorithmComboBox" prefHeight="25.0" prefWidth="288.0" promptText="select algorithm" />
                 </HBox>
                 <Button fx:id="quantizeButton" layoutX="747.0" layoutY="95.0" mnemonicParsing="false" onAction="#quantizeImageAction" prefHeight="27.0" prefWidth="96.0" text="Quantize" />
-                <Text fill="#1d7874" layoutX="211.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Original Image" />
-                <Text fill="#1d7874" layoutX="592.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantized Image" />
-            <Text fx:id="originalImageSizeTextView" fill="#274060" layoutX="46.0" layoutY="512.0" strokeType="OUTSIDE" strokeWidth="0.0">
-               <font>
-                  <Font name="Open Sans" size="12.0" />
-               </font>
-            </Text>
+                <Text fill="#1d7874" layoutX="211.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Original Image" />
+                <Text fill="#1d7874" layoutX="594.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantized Image" />
+                <Text fx:id="originalImageSizeTextView" fill="#274060" layoutX="46.0" layoutY="512.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                <Text fx:id="originalImageNumOfColorsTextView" fill="#274060" layoutX="46.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                <Text fx:id="quantizedImageSizeTextView" fill="#274060" layoutX="449.0" layoutY="512.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                <Text fx:id="quantizedImageNumOfColorsTextView" fill="#274060" layoutX="449.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0">
+
+                    <font>
+                        <Font name="Open Sans" size="12.0" />
+                    </font>
+                </Text>
+                <TextField fx:id="valueTextField" layoutX="349.0" layoutY="125.0" promptText="Enter a value" />
+            <GridPane fx:id="gridColorPalette" layoutX="335.0" layoutY="499.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <Button fx:id="quantizedColorPalette" layoutX="715.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayColorPalette" text="Show Color Palette " />
+            <Button fx:id="originalHistogram" layoutX="41.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayOriginalHistogram" text="Show Histogram" />
+            <Button fx:id="quantizedHistogram" layoutX="565.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayQuantizedHistogram" text="Show Histogram" />
+            <Button fx:id="originalColorPalette" layoutX="190.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayOriginalColorPalette" text="Show Color Palette " />
             </Pane>
         </center>
     </BorderPane>
