--- a/src/main/resources/com/icq/imagecolorquantizer/main-view.fxml
+++ b/src/main/resources/com/icq/imagecolorquantizer/main-view.fxml
@@ -6,11 +6,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -35,9 +32,9 @@
                 <Button fx:id="quantizeButton" layoutX="747.0" layoutY="95.0" mnemonicParsing="false" onAction="#quantizeImageAction" prefHeight="27.0" prefWidth="96.0" text="Quantize" />
                 <Text fill="#1d7874" layoutX="211.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Original Image" />
                 <Text fill="#1d7874" layoutX="594.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantized Image" />
-                <Text fx:id="originalImageSizeTextView" fill="#274060" layoutX="46.0" layoutY="512.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                <Text fx:id="originalImageSizeTextView" fill="#274060" layoutX="44.0" layoutY="503.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                 <Text fx:id="originalImageNumOfColorsTextView" fill="#274060" layoutX="46.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                <Text fx:id="quantizedImageSizeTextView" fill="#274060" layoutX="449.0" layoutY="512.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                <Text fx:id="quantizedImageSizeTextView" fill="#274060" layoutX="447.0" layoutY="503.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                 <Text fx:id="quantizedImageNumOfColorsTextView" fill="#274060" layoutX="449.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0">
 
                     <font>
@@ -45,21 +42,23 @@
                     </font>
                 </Text>
                 <TextField fx:id="valueTextField" layoutX="349.0" layoutY="125.0" promptText="Enter a value" />
-            <GridPane fx:id="gridColorPalette" layoutX="335.0" layoutY="499.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-            <Button fx:id="quantizedColorPalette" layoutX="715.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayColorPalette" text="Show Color Palette " />
-            <Button fx:id="originalHistogram" layoutX="41.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayOriginalHistogram" text="Show Histogram" />
-            <Button fx:id="quantizedHistogram" layoutX="565.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayQuantizedHistogram" text="Show Histogram" />
-            <Button fx:id="originalColorPalette" layoutX="190.0" layoutY="532.0" mnemonicParsing="false" onAction="#displayOriginalColorPalette" text="Show Color Palette " />
+            <Button fx:id="quantizedColorPalette" layoutX="586.0" layoutY="545.0" mnemonicParsing="false" onAction="#displayColorPalette" text="Show Color Palette ">
+               <font>
+                  <Font name="Open Sans" size="12.0" />
+               </font></Button>
+            <Button fx:id="originalHistogram" layoutX="89.0" layoutY="545.0" mnemonicParsing="false" onAction="#displayOriginalHistogram" text="Show Histogram">
+               <font>
+                  <Font name="Open Sans" size="12.0" />
+               </font></Button>
+            <Button fx:id="quantizedHistogram" layoutX="463.0" layoutY="545.0" mnemonicParsing="false" onAction="#displayQuantizedHistogram" text="Show Histogram">
+               <font>
+                  <Font name="Open Sans" size="12.0" />
+               </font></Button>
+            <Button fx:id="saveImageBtn" disable="true" layoutX="747.0" layoutY="544.0" mnemonicParsing="false" onAction="#saveQuantizedImageAction" prefHeight="25.0" prefWidth="90.0" text="Save" textAlignment="CENTER">
+               <font>
+                  <Font name="Open Sans" size="12.0" />
+               </font>
+            </Button>
             </Pane>
         </center>
     </BorderPane>
