--- a/src/main/resources/com/icq/imagecolorquantizer/images-matcher-view.fxml
+++ b/src/main/resources/com/icq/imagecolorquantizer/images-matcher-view.fxml
@@ -54,14 +54,14 @@
             </VBox>
             <TextField fx:id="thresholdTF" disable="true" layoutX="71.0" layoutY="214.0" promptText="optional (default 18)" />
             <Text layoutX="12.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Threshold" />
-            <DatePicker fx:id="datePiker" disable="true" layoutX="244.0" layoutY="279.0" />
-            <Text layoutX="246.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of shoot " />
-            <TextField fx:id="sizeTextField" disable="true" layoutX="244.0" layoutY="326.0" prefHeight="26.0" prefWidth="175.0" promptText="Enter the size " />
-            <Text layoutX="249.0" layoutY="322.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size of photo (KB)" />
+            <DatePicker fx:id="toDatePiker" disable="true" layoutX="244.0" layoutY="312.0" />
+            <Text layoutX="246.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" text="From Date" />
+            <TextField fx:id="minSizeTextField" disable="true" layoutX="250.0" layoutY="363.0" prefHeight="26.0" prefWidth="74.0" promptText="optional" />
+            <Text layoutX="252.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Min Size (KB)" />
             <ImageView fx:id="originalImageView" fitHeight="152.0" fitWidth="206.0" layoutX="22.0" layoutY="420.0" pickOnBounds="true" preserveRatio="true" />
             <Button fx:id="cropButton" disable="true" layoutX="303.0" layoutY="420.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="122.0" text="Crop Image" />
             <Button fx:id="dimensionButton" disable="true" layoutX="303.0" layoutY="530.0" mnemonicParsing="false" onAction="#resizeButtonClick" text="Change Dimensions" />
-            <Button fx:id="searchButton" disable="true" layoutX="246.0" layoutY="610.0" mnemonicParsing="false" onAction="#searchButtonClick" text="Search for Image" />
+            <Button fx:id="searchButton" disable="true" layoutX="248.0" layoutY="608.0" mnemonicParsing="false" onAction="#searchButtonClick" text="Search for Image" />
             <GridPane fx:id="selectedColorsGridPane" hgap="1.0" layoutX="42.0" layoutY="76.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="59.0" prefWidth="321.0" vgap="1.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -87,6 +87,10 @@
                </font>
             </TextField>
             <Button fx:id="searchColorsBtn" disable="true" layoutX="87.0" layoutY="608.0" mnemonicParsing="false" onAction="#searchForColorButtonClick" text="Search for Colors" />
+            <DatePicker fx:id="fromDatePiker" disable="true" layoutX="244.0" layoutY="262.0" />
+            <TextField fx:id="maxSizeTextField" disable="true" layoutX="336.0" layoutY="363.0" prefHeight="26.0" prefWidth="74.0" promptText="optional" />
+            <Text layoutX="246.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="To Date" />
+            <Text layoutX="337.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Max Size (KB)" />
          </children>
       </AnchorPane>
   </items>
